# jlcparts-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: FUNDING.yml
.github/workflows/: ci.yml  update_components.yaml
docs/superpowers/plans/: 2026-06-04-compact-mcp-index.md
jlcparts/: attributes.py  compact_index.py  compact_query.py  datatables.py  jlcpcb.py  mcp_server.py  pricing.py  query_cache.py  query_service.py  sourceDb.py  taxonomy.py  ui.py  upstream_catalog.py
scripts/: check_readme_links.py
test/: conftest.py  test_attribute_normalization.py  test_attribute_section_scan.py  test_compact_cli.py  test_compact_index.py  test_compact_query.py  test_jlcpcb_credentials.py  test_jlcpcb_enrichment.py  test_mcp_server.py  test_query_service.py  test_upstream_catalog.py  test_website_enrichment_flow.py
web/: package-lock.json  package.json
web/src/: app.js  compare.js  componentTable.js  db.js  history.js  index.js  jlc.js  sortableTable.js  units.js
