[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jlcparts"
version = "0.1.0"
description = "Better view of JLC PCB parts"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jan Mrázek", email = "email@honzamrazek.cz" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "lxml",
    "mcp",
    "requests",
]

[project.urls]
Homepage = "https://github.com/RoboticsBrno/JLCPCB-Parts"

[project.scripts]
jlcparts = "jlcparts.ui:cli"
jlcparts-enrich-website = "jlcparts.ui:enrichWebsite"
jlcparts-refresh-cache = "jlcparts.ui:refreshCache"
jlcparts-mcp = "jlcparts.mcp_server:main"

[tool.setuptools.packages.find]
include = ["jlcparts*"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[dependency-groups]
dev = [
    "pytest",
]
