[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "jlcparts-mcp"
version = "0.1.0"
description = "Cache-first MCP server for JLCPCB SMT assembly component search"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jan Mrázek" },
]
maintainers = [
    { name = "Inyo Systems" },
]
keywords = ["jlcpcb", "lcsc", "mcp", "electronics", "pcba", "smt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click",
    "lxml",
    "mcp",
    "requests",
]

[project.urls]
Homepage = "https://github.com/inyosystems/jlcparts-mcp"
Repository = "https://github.com/inyosystems/jlcparts-mcp"
Issues = "https://github.com/inyosystems/jlcparts-mcp/issues"
Changelog = "https://github.com/inyosystems/jlcparts-mcp/blob/master/CHANGELOG.md"
"Upstream Project" = "https://github.com/yaqwsx/jlcparts"
"Source Catalog" = "https://yaqwsx.github.io/jlcparts/data"

[project.scripts]
jlcparts = "jlcparts.ui:cli"
jlcparts-download-catalog = "jlcparts.ui:downloadCatalog"
jlcparts-build-index = "jlcparts.ui:buildIndex"
jlcparts-mcp = "jlcparts.mcp_server:main"

[tool.setuptools.packages.find]
include = ["jlcparts*"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[dependency-groups]
dev = [
    "pytest",
]
